# aegis-mcp-governance

./: 2026 HACKATHHON.docx  Cargo.toml
src/: main.rs
